image classification conv layer

--- a/image-classification/dlnd_image_classification.ipynb
+++ b/image-classification/dlnd_image_classification.ipynb
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -359,11 +359,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image Input Tests Passed.\n",
+      "Label Input Tests Passed.\n",
+      "Keep Prob Tests Passed.\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "\n",
@@ -374,7 +384,7 @@
     "    : return: Tensor for image input.\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    return tf.placeholder(tf.float32, shape = [None] + list(image_shape), name=\"x\")\n",
     "\n",
     "\n",
     "def neural_net_label_input(n_classes):\n",
@@ -384,7 +394,7 @@
     "    : return: Tensor for label input.\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    return tf.placeholder(tf.float32, [None, n_classes], name=\"y\")\n",
     "\n",
     "\n",
     "def neural_net_keep_prob_input():\n",
@@ -393,7 +403,7 @@
     "    : return: Tensor for keep probability.\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    return tf.placeholder(tf.float32, name=\"keep_prob\")\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -424,11 +434,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 2, 5, 10]\n",
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def conv2d_maxpool(x_tensor, conv_num_outputs, conv_ksize, conv_strides, pool_ksize, pool_strides):\n",
     "    \"\"\"\n",
@@ -442,7 +461,21 @@
     "    : return: A tensor that represents convolution and max pooling of x_tensor\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None \n",
+    "    _, w_in, h_in, depth_in = x_tensor.shape\n",
+    "    f_w, f_h = conv_ksize\n",
+    "    s_w, s_h = conv_strides\n",
+    "    k_w, k_h = pool_ksize\n",
+    "    p_h, p_w = pool_strides\n",
+    "    weight_shape = [f_w, f_h, int(depth_in), conv_num_outputs]\n",
+    "    #print(\"{}\".format(weight_shape))\n",
+    "    weights = tf.Variable(tf.truncated_normal(weight_shape, mean=0, stddev=0.1))\n",
+    "    biases = tf.Variable(tf.zeros(conv_num_outputs))\n",
+    "    conv = tf.nn.conv2d(x_tensor, weights, [1, s_w, s_h, 1], 'SAME')\n",
+    "    conv = tf.nn.bias_add(conv, biases)\n",
+    "    conv = tf.nn.relu(conv)\n",
+    "    conv = tf.nn.max_pool(conv, [1, k_w, k_h, 1], [1, p_h, p_w, 1], 'SAME')\n",
+    "    #conv = tf.nn.conv2d(x_tensor, )\n",
+    "    return conv \n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -461,11 +494,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(?, 10, 30, 6)\n",
+      "1800\n",
+      "(?, 1800)\n",
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def flatten(x_tensor):\n",
     "    \"\"\"\n",
@@ -474,7 +518,14 @@
     "    : return: A tensor of size (Batch Size, Flattened Image Size).\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    print(x_tensor.shape)\n",
+    "    prod_tensor = tf.reduce_prod(x_tensor.shape[1:])\n",
+    "    with tf.Session() as sess:\n",
+    "        flat_size = sess.run(prod_tensor)\n",
+    "        print(flat_size)\n",
+    "        reshaped = tf.reshape(x_tensor, [-1, flat_size])\n",
+    "        print(reshaped.shape)\n",
+    "        return reshaped\n",
     "\n",
     "\n",
     "\"\"\"\n",
