--- a/image-classification/dlnd_image_classification.ipynb
+++ b/image-classification/dlnd_image_classification.ipynb
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
@@ -519,8 +519,8 @@
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
     "    print(x_tensor.shape)\n",
-    "    prod_tensor = tf.reduce_prod(x_tensor.shape[1:])\n",
     "    with tf.Session() as sess:\n",
+    "        prod_tensor = tf.reduce_prod(x_tensor.shape[1:])\n",
     "        flat_size = sess.run(prod_tensor)\n",
     "        print(flat_size)\n",
     "        reshaped = tf.reshape(x_tensor, [-1, flat_size])\n",
@@ -544,11 +544,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "128\n",
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def fully_conn(x_tensor, num_outputs):\n",
     "    \"\"\"\n",
@@ -558,7 +567,13 @@
     "    : return: A 2-D tensor where the second dimension is num_outputs.\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    print(x_tensor.shape.as_list()[-1])\n",
+    "    weights_shape = [x_tensor.shape.as_list()[-1], num_outputs]\n",
+    "    weights = tf.Variable(tf.truncated_normal(weights_shape, mean=0, stddev=0))\n",
+    "    biases = tf.Variable(tf.zeros(num_outputs))\n",
+    "    layer = tf.add(tf.matmul(x_tensor, weights), biases)\n",
+    "    layer = tf.nn.relu(layer)\n",
+    "    return layer\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -579,11 +594,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "128\n",
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def output(x_tensor, num_outputs):\n",
     "    \"\"\"\n",
@@ -592,8 +616,13 @@
     "    : num_outputs: The number of output that the new tensor should be.\n",
     "    : return: A 2-D tensor where the second dimension is num_outputs.\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    print(x_tensor.shape.as_list()[-1])\n",
+    "    weights_shape = [x_tensor.shape.as_list()[-1], num_outputs]\n",
+    "    weights = tf.Variable(tf.truncated_normal(weights_shape, mean=0, stddev=0))\n",
+    "    biases = tf.Variable(tf.zeros(num_outputs))\n",
+    "    layer = tf.add(tf.matmul(x_tensor, weights), biases)\n",
+    "    #layer = tf.nn.relu(layer)\n",
+    "    return layer\n",
     "\n",
     "\n",
     "\"\"\"\n",
