--- a/image-classification/dlnd_image_classification.ipynb
+++ b/image-classification/dlnd_image_classification.ipynb
@@ -648,11 +648,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensor(\"x:0\", shape=(?, 32, 32, 3), dtype=float32)\n",
+      "[4, 4, 3, 18]\n",
+      "(?, 32, 32, 18)\n",
+      "18432\n",
+      "(?, 18432)\n",
+      "18432\n",
+      "384\n",
+      "Tensor(\"Placeholder:0\", shape=(?, 32, 32, 3), dtype=float32)\n",
+      "[4, 4, 3, 18]\n",
+      "(?, 32, 32, 18)\n",
+      "18432\n",
+      "(?, 18432)\n",
+      "18432\n",
+      "384\n",
+      "Neural Network Built!\n"
+     ]
+    }
+   ],
    "source": [
     "def conv_net(x, keep_prob):\n",
     "    \"\"\"\n",
@@ -665,27 +687,34 @@
     "    #    Play around with different number of outputs, kernel size and stride\n",
     "    # Function Definition from Above:\n",
     "    #    conv2d_maxpool(x_tensor, conv_num_outputs, conv_ksize, conv_strides, pool_ksize, pool_strides)\n",
+    "    print(x)\n",
+    "    model = conv2d_maxpool(x, 18, (4,4), (1,1), (8,8), (1,1))\n",
+    "    #model = conv2d_maxpool(model, 8, (4,4), (1,1), (4,4), (1,1))\n",
     "    \n",
     "\n",
     "    # TODO: Apply a Flatten Layer\n",
     "    # Function Definition from Above:\n",
     "    #   flatten(x_tensor)\n",
+    "    model = flatten(model)\n",
+    "\n",
     "    \n",
     "\n",
     "    # TODO: Apply 1, 2, or 3 Fully Connected Layers\n",
     "    #    Play around with different number of outputs\n",
     "    # Function Definition from Above:\n",
     "    #   fully_conn(x_tensor, num_outputs)\n",
+    "    model = fully_conn(model, 384)\n",
     "    \n",
     "    \n",
     "    # TODO: Apply an Output Layer\n",
     "    #    Set this to the number of classes\n",
     "    # Function Definition from Above:\n",
     "    #   output(x_tensor, num_outputs)\n",
-    "    \n",
+    "    model = tf.nn.dropout(model, keep_prob)\n",
+    "    model = output(model, 10)\n",
     "    \n",
     "    # TODO: return output\n",
-    "    return None\n",
+    "    return model\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -739,11 +768,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def train_neural_network(session, optimizer, keep_probability, feature_batch, label_batch):\n",
     "    \"\"\"\n",
@@ -754,8 +791,8 @@
     "    : feature_batch: Batch of Numpy image data\n",
     "    : label_batch: Batch of Numpy label data\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    pass\n",
+    "    session.run(optimizer, feed_dict={x:feature_batch, y:label_batch, keep_prob:keep_probability})\n",
+    "        \n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -774,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {
     "collapsed": false
    },
@@ -789,8 +826,9 @@
     "    : cost: TensorFlow cost function\n",
     "    : accuracy: TensorFlow accuracy function\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    pass"
+    "    loss = session.run(cost, feed_dict={x:feature_batch, y:label_batch, keep_prob:1.0})\n",
+    "    valid_acc = sess.run(accuracy, feed_dict={x: valid_features, y: valid_labels, keep_prob: 1.})\n",
+    "    print('Loss: {:>10.4f} Validation Accuracy: {:.6f}'.format(loss,valid_acc))"
    ]
   },
   {
@@ -810,16 +848,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# TODO: Tune Parameters\n",
-    "epochs = None\n",
-    "batch_size = None\n",
-    "keep_probability = None"
+    "epochs = 5\n",
+    "batch_size = 256\n",
+    "keep_probability = 1."
    ]
   },
   {
@@ -832,11 +870,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Checking the Training on a Single Batch...\n",
+      "Epoch  1, CIFAR-10 Batch 1:  Loss:     2.3031 Validation Accuracy: 0.099800\n",
+      "Epoch  2, CIFAR-10 Batch 1:  Loss:     2.3030 Validation Accuracy: 0.105000\n",
+      "Epoch  3, CIFAR-10 Batch 1:  Loss:     2.3029 Validation Accuracy: 0.105000\n",
+      "Epoch  4, CIFAR-10 Batch 1:  Loss:     2.3028 Validation Accuracy: 0.105000\n",
+      "Epoch  5, CIFAR-10 Batch 1:  Loss:     2.3027 Validation Accuracy: 0.105000\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
@@ -865,11 +916,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training...\n",
+      "Epoch  1, CIFAR-10 Batch 1:  Loss:     2.3031 Validation Accuracy: 0.099800\n",
+      "Epoch  1, CIFAR-10 Batch 2:  Loss:     2.3031 Validation Accuracy: 0.099800\n",
+      "Epoch  1, CIFAR-10 Batch 3:  Loss:     2.3019 Validation Accuracy: 0.099800\n",
+      "Epoch  1, CIFAR-10 Batch 4:  Loss:     2.3024 Validation Accuracy: 0.099800\n",
+      "Epoch  1, CIFAR-10 Batch 5:  Loss:     2.3025 Validation Accuracy: 0.094200\n",
+      "Epoch  2, CIFAR-10 Batch 1:  Loss:     2.3029 Validation Accuracy: 0.094200\n",
+      "Epoch  2, CIFAR-10 Batch 2:  Loss:     2.3020 Validation Accuracy: 0.099800\n",
+      "Epoch  2, CIFAR-10 Batch 3:  Loss:     2.3007 Validation Accuracy: 0.102000\n",
+      "Epoch  2, CIFAR-10 Batch 4:  Loss:     2.3014 Validation Accuracy: 0.094200\n",
+      "Epoch  2, CIFAR-10 Batch 5:  Loss:     2.3024 Validation Accuracy: 0.094200\n",
+      "Epoch  3, CIFAR-10 Batch 1:  Loss:     2.3028 Validation Accuracy: 0.094200\n",
+      "Epoch  3, CIFAR-10 Batch 2:  Loss:     2.3015 Validation Accuracy: 0.102000\n",
+      "Epoch  3, CIFAR-10 Batch 3:  Loss:     2.3003 Validation Accuracy: 0.094200\n",
+      "Epoch  3, CIFAR-10 Batch 4:  Loss:     2.3010 Validation Accuracy: 0.094200\n",
+      "Epoch  3, CIFAR-10 Batch 5:  Loss:     2.3023 Validation Accuracy: 0.094200\n",
+      "Epoch  4, CIFAR-10 Batch 1:  Loss:     2.3027 Validation Accuracy: 0.094200\n",
+      "Epoch  4, CIFAR-10 Batch 2:  Loss:     2.3013 Validation Accuracy: 0.094200\n",
+      "Epoch  4, CIFAR-10 Batch 3:  Loss:     2.3001 Validation Accuracy: 0.094200\n",
+      "Epoch  4, CIFAR-10 Batch 4:  Loss:     2.3008 Validation Accuracy: 0.094200\n",
+      "Epoch  4, CIFAR-10 Batch 5:  Loss:     2.3023 Validation Accuracy: 0.094200\n",
+      "Epoch  5, CIFAR-10 Batch 1:  Loss:     2.3027 Validation Accuracy: 0.094200\n",
+      "Epoch  5, CIFAR-10 Batch 2:  Loss:     2.3012 Validation Accuracy: 0.094200\n",
+      "Epoch  5, CIFAR-10 Batch 3:  Loss:     2.3000 Validation Accuracy: 0.094200\n",
+      "Epoch  5, CIFAR-10 Batch 4:  Loss:     2.3008 Validation Accuracy: 0.094200\n",
+      "Epoch  5, CIFAR-10 Batch 5:  Loss:     2.3023 Validation Accuracy: 0.094200\n",
+      "Epoch  6, CIFAR-10 Batch 1:  Loss:     2.3027 Validation Accuracy: 0.094200\n",
+      "Epoch  6, CIFAR-10 Batch 2:  Loss:     2.3012 Validation Accuracy: 0.094200\n",
+      "Epoch  6, CIFAR-10 Batch 3:  Loss:     2.3000 Validation Accuracy: 0.094200\n",
+      "Epoch  6, CIFAR-10 Batch 4:  Loss:     2.3007 Validation Accuracy: 0.094200\n",
+      "Epoch  6, CIFAR-10 Batch 5:  Loss:     2.3023 Validation Accuracy: 0.094200\n",
+      "Epoch  7, CIFAR-10 Batch 1:  Loss:     2.3027 Validation Accuracy: 0.094200\n",
+      "Epoch  7, CIFAR-10 Batch 2:  Loss:     2.3012 Validation Accuracy: 0.094200\n",
+      "Epoch  7, CIFAR-10 Batch 3:  Loss:     2.3000 Validation Accuracy: 0.094200\n",
+      "Epoch  7, CIFAR-10 Batch 4:  Loss:     2.3007 Validation Accuracy: 0.094200\n",
+      "Epoch  7, CIFAR-10 Batch 5:  Loss:     2.3023 Validation Accuracy: 0.094200\n",
+      "Epoch  8, CIFAR-10 Batch 1:  Loss:     2.3027 Validation Accuracy: 0.094200\n",
+      "Epoch  8, CIFAR-10 Batch 2:  Loss:     2.3012 Validation Accuracy: 0.094200\n",
+      "Epoch  8, CIFAR-10 Batch 3:  Loss:     2.3000 Validation Accuracy: 0.094200\n",
+      "Epoch  8, CIFAR-10 Batch 4:  Loss:     2.3007 Validation Accuracy: 0.094200\n",
+      "Epoch  8, CIFAR-10 Batch 5:  Loss:     2.3023 Validation Accuracy: 0.094200\n",
+      "Epoch  9, CIFAR-10 Batch 1:  Loss:     2.3027 Validation Accuracy: 0.094200\n",
+      "Epoch  9, CIFAR-10 Batch 2:  Loss:     2.3012 Validation Accuracy: 0.094200\n",
+      "Epoch  9, CIFAR-10 Batch 3:  Loss:     2.3000 Validation Accuracy: 0.094200\n",
+      "Epoch  9, CIFAR-10 Batch 4:  Loss:     2.3007 Validation Accuracy: 0.094200\n",
+      "Epoch  9, CIFAR-10 Batch 5:  Loss:     2.3023 Validation Accuracy: 0.094200\n",
+      "Epoch 10, CIFAR-10 Batch 1:  Loss:     2.3027 Validation Accuracy: 0.094200\n",
+      "Epoch 10, CIFAR-10 Batch 2:  Loss:     2.3012 Validation Accuracy: 0.094200\n",
+      "Epoch 10, CIFAR-10 Batch 3:  Loss:     2.3000 Validation Accuracy: 0.094200\n",
+      "Epoch 10, CIFAR-10 Batch 4:  Loss:     2.3007 Validation Accuracy: 0.094200\n",
+      "Epoch 10, CIFAR-10 Batch 5:  Loss:     2.3023 Validation Accuracy: 0.094200\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
