word2vec excercise

--- a/embeddings/Skip-Gram_word2vec.ipynb
+++ b/embeddings/Skip-Gram_word2vec.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -78,11 +78,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Text8 Dataset: 31.4MB [01:02, 505KB/s]                                                                              \n"
+     ]
+    }
+   ],
    "source": [
     "from urllib.request import urlretrieve\n",
     "from os.path import isfile, isdir\n",
@@ -127,11 +135,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['anarchism', 'originated', 'as', 'a', 'term', 'of', 'abuse', 'first', 'used', 'against', 'early', 'working', 'class', 'radicals', 'including', 'the', 'diggers', 'of', 'the', 'english', 'revolution', 'and', 'the', 'sans', 'culottes', 'of', 'the', 'french', 'revolution', 'whilst']\n"
+     ]
+    }
+   ],
    "source": [
     "words = utils.preprocess(text)\n",
     "print(words[:30])"
@@ -139,11 +155,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total words: 16680599\n",
+      "Unique words: 63641\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Total words: {}\".format(len(words)))\n",
     "print(\"Unique words: {}\".format(len(set(words))))"
@@ -158,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -187,14 +212,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict_items'>\n",
+      "16680599\n",
+      "[(0, 1061396), (1, 593677), (2, 416629), (3, 411764), (4, 372201), (5, 325873), (6, 316376), (7, 264975), (8, 250430), (9, 192644), (10, 183153), (11, 131815), (12, 125285), (13, 118445), (14, 116710), (15, 115789), (16, 114775), (17, 112807), (18, 111831), (19, 109510), (20, 108182), (21, 102145), (22, 99683), (23, 95603), (24, 91250), (25, 76527), (26, 73334), (27, 72871), (28, 68945), (29, 62603)]\n"
+     ]
+    }
+   ],
    "source": [
     "## Your code here\n",
-    "train_words = # The final subsampled word list"
+    "from collections import Counter\n",
+    "print(type(vocab_to_int.items()))\n",
+    "counter = Counter(int_words)\n",
+    "total_words = len(int_words)\n",
+    "print(total_words)\n",
+    "print(list(counter.items())[:30])\n",
+    "#train_words = # The final subsampled word list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(0, 0.98746376577740469), (1, 0.98323781193133519), (2, 0.97999073790717206), (3, 0.9798728800896066), (4, 0.97883018546630463), (5, 0.97737536238795875), (6, 0.97703829909505446), (7, 0.9749098434772655), (8, 0.97419150710880509), (9, 0.97057421364733043), (10, 0.96982141987906356), (11, 0.9644267615025448), (12, 0.96351147714751806), (13, 0.96247268826339005), (14, 0.96219477853599333), (15, 0.96204472263650453), (16, 0.96187743001877457), (17, 0.96154632989244049), (18, 0.96137889308882907), (19, 0.96097176318217992)]\n",
+      "16680599 4626966\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "threshold = 1e-5\n",
+    "freqs = {c: c_count/total_words for c, c_count in counter.items()}\n",
+    "p = {w: 1-np.sqrt(threshold/f) for w, f in freqs.items()}\n",
+    "print(list(p.items())[:20])\n",
+    "train_words = [w for w in int_words if random.random() < 1-p[w]]\n",
+    "print(len(int_words), len(train_words))"
    ]
   },
   {
@@ -219,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
@@ -228,9 +295,12 @@
     "def get_target(words, idx, window_size=5):\n",
     "    ''' Get a list of words in a window around an index. '''\n",
     "    \n",
-    "    # Your code here\n",
+    "    r = random.randint(1, window_size+1)\n",
+    "    start = idx - r if (idx-r>0) else 0\n",
+    "    stop = idx + r\n",
+    "    target_words = set(words[start:idx] + words[idx+1:stop+1])\n",
     "    \n",
-    "    return"
+    "    return list(target_words)"
    ]
   },
   {
@@ -242,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
@@ -288,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
@@ -296,8 +366,8 @@
    "source": [
     "train_graph = tf.Graph()\n",
     "with train_graph.as_default():\n",
-    "    inputs = \n",
-    "    labels = "
+    "    inputs = tf.placeholder(tf.int32, [None], name=\"inputs\")\n",
+    "    labels = tf.placeholder(tf.int32, [None, None], name=\"labels\")"
    ]
   },
   {
@@ -322,17 +392,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "n_vocab = len(int_to_vocab)\n",
-    "n_embedding =  # Number of embedding features \n",
+    "n_embedding =  200 # Number of embedding features \n",
     "with train_graph.as_default():\n",
-    "    embedding = # create embedding weight matrix here\n",
-    "    embed = # use tf.nn.embedding_lookup to get the hidden layer output"
+    "    embedding = tf.Variable(tf.random_uniform((n_vocab, n_embedding), -1, 1)) # create embedding weight matrix here\n",
+    "    embed = tf.nn.embedding_lookup(embedding, inputs) # use tf.nn.embedding_lookup to get the hidden layer output"
    ]
   },
   {
@@ -354,20 +424,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Number of negative labels to sample\n",
     "n_sampled = 100\n",
     "with train_graph.as_default():\n",
-    "    softmax_w = # create softmax weight matrix here\n",
-    "    softmax_b = # create softmax biases here\n",
+    "    softmax_w = tf.Variable(tf.truncated_normal((n_vocab, n_embedding), stddev=0.1))\n",
+    "    softmax_b = tf.Variable(tf.zeros(n_vocab))\n",
     "    \n",
     "    # Calculate the loss using negative sampling\n",
-    "    loss = tf.nn.sampled_softmax_loss \n",
+    "    loss = tf.nn.sampled_softmax_loss(softmax_w, softmax_b, \n",
+    "                                      labels, embed,\n",
+    "                                      n_sampled, n_vocab) \n",
     "    \n",
     "    cost = tf.reduce_mean(loss)\n",
     "    optimizer = tf.train.AdamOptimizer().minimize(cost)"
@@ -384,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {
     "collapsed": true
    },
@@ -410,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "collapsed": true
    },
@@ -433,9 +505,97 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10 Iteration: 100 Avg. Training loss: 5.6551 0.5851 sec/batch\n",
+      "Epoch 1/10 Iteration: 200 Avg. Training loss: 5.6290 0.5353 sec/batch\n",
+      "Epoch 1/10 Iteration: 300 Avg. Training loss: 5.5205 0.5369 sec/batch\n",
+      "Epoch 1/10 Iteration: 400 Avg. Training loss: 5.5791 0.5342 sec/batch\n",
+      "Epoch 1/10 Iteration: 500 Avg. Training loss: 5.4859 0.5629 sec/batch\n",
+      "Epoch 1/10 Iteration: 600 Avg. Training loss: 5.5446 0.6033 sec/batch\n",
+      "Epoch 1/10 Iteration: 700 Avg. Training loss: 5.5413 0.5932 sec/batch\n",
+      "Epoch 1/10 Iteration: 800 Avg. Training loss: 5.5164 0.5708 sec/batch\n",
+      "Epoch 1/10 Iteration: 900 Avg. Training loss: 5.5025 0.5695 sec/batch\n",
+      "Epoch 1/10 Iteration: 1000 Avg. Training loss: 5.4605 0.5888 sec/batch\n",
+      "Nearest to also: charging, mulliken, sheikh, realvideo, ptc, sagara, salutary, observes,\n",
+      "Nearest to b: afterburner, instructions, grigori, symbolist, mcs, shimla, semper, southend,\n",
+      "Nearest to are: mirabilis, polymers, applets, composer, salisbury, spencer, wastes, pancreatitis,\n",
+      "Nearest to the: cuthbert, quays, dame, toward, nominations, tarn, archbishops, incensed,\n",
+      "Nearest to to: caria, diuretics, european, pompey, banking, deferred, antidepressant, igreja,\n",
+      "Nearest to that: eritreans, frenzy, othniel, clitoridectomy, pork, mp, mccandless, recognition,\n",
+      "Nearest to were: bicycle, giuseppe, extended, codebase, rarity, avot, broadside, jorge,\n",
+      "Nearest to where: parsed, peace, competitiveness, recht, chapter, protected, consulship, ships,\n",
+      "Nearest to engine: togoland, nullify, teimanim, circularly, invitation, simitis, animations, saberhagen,\n",
+      "Nearest to award: rewriting, ushered, este, templi, zwicker, adduce, elias, javaserver,\n",
+      "Nearest to pre: alfaro, decision, inaccurately, hibbert, chronica, booker, farting, weser,\n",
+      "Nearest to writers: underwood, soho, secret, lefties, polling, love, bucks, oaths,\n",
+      "Nearest to dr: disney, magazine, dunlop, satyajit, smuggling, nixon, ronaldo, subway,\n",
+      "Nearest to recorded: tubulidentata, peshawar, moab, electrified, junichiro, unskilled, fragment, iea,\n",
+      "Nearest to resources: catastrophes, weidman, borrower, runge, commemorative, strife, unregulated, bought,\n",
+      "Nearest to bbc: sociable, rubidium, reservation, internationalism, robber, jonas, acknowledgment, relaxing,\n",
+      "Epoch 1/10 Iteration: 1100 Avg. Training loss: 5.5014 0.5894 sec/batch\n",
+      "Epoch 1/10 Iteration: 1200 Avg. Training loss: 5.4208 0.5881 sec/batch\n",
+      "Epoch 1/10 Iteration: 1300 Avg. Training loss: 5.3633 0.6011 sec/batch\n",
+      "Epoch 1/10 Iteration: 1400 Avg. Training loss: 5.2175 0.6028 sec/batch\n",
+      "Epoch 1/10 Iteration: 1500 Avg. Training loss: 5.1751 0.6003 sec/batch\n",
+      "Epoch 1/10 Iteration: 1600 Avg. Training loss: 5.1597 0.6004 sec/batch\n",
+      "Epoch 1/10 Iteration: 1700 Avg. Training loss: 5.0966 0.5974 sec/batch\n",
+      "Epoch 1/10 Iteration: 1800 Avg. Training loss: 5.0674 0.6003 sec/batch\n",
+      "Epoch 1/10 Iteration: 1900 Avg. Training loss: 5.0021 0.5798 sec/batch\n",
+      "Epoch 1/10 Iteration: 2000 Avg. Training loss: 4.9639 0.5961 sec/batch\n",
+      "Nearest to also: charging, every, forming, ptc, stored, observes, theorems, realvideo,\n",
+      "Nearest to b: instructions, afterburner, setting, holidays, leaguers, southend, cayman, symbolist,\n",
+      "Nearest to are: mirabilis, comic, much, option, polymers, composer, fistful, considered,\n",
+      "Nearest to the: toward, nominations, dame, quays, additionally, cuthbert, questions, honored,\n",
+      "Nearest to to: european, deferred, african, caria, trait, diseases, shown, banking,\n",
+      "Nearest to that: recognition, distinction, eritreans, frenzy, pork, theoretical, respond, t,\n",
+      "Nearest to were: bicycle, extended, task, giuseppe, rarity, instructions, longer, jorge,\n",
+      "Nearest to where: peace, parsed, protected, chapter, energy, talks, has, ships,\n",
+      "Nearest to engine: ljubljana, togoland, nullify, jigoro, discoverer, priest, romagna, animations,\n",
+      "Nearest to award: ushered, rewriting, should, gammon, egregious, linguists, coincidentally, nevertheless,\n",
+      "Nearest to pre: decision, banque, vertical, shading, people, alfaro, display, transshipment,\n",
+      "Nearest to writers: underwood, secret, love, soho, intended, sizes, cobe, mutilation,\n",
+      "Nearest to dr: disney, magazine, wonderful, found, subway, twelve, dunlop, socially,\n",
+      "Nearest to recorded: peshawar, moab, unskilled, acclaimed, electrified, me, tubulidentata, security,\n",
+      "Nearest to resources: catastrophes, bought, strife, borrower, runge, address, abdali, commemorative,\n",
+      "Nearest to bbc: sociable, reservation, internationalism, rubidium, robber, jonas, acknowledgment, ediacara,\n",
+      "Epoch 1/10 Iteration: 2100 Avg. Training loss: 4.9368 0.5906 sec/batch\n",
+      "Epoch 1/10 Iteration: 2200 Avg. Training loss: 4.9033 0.5899 sec/batch\n",
+      "Epoch 1/10 Iteration: 2300 Avg. Training loss: 4.8977 0.5883 sec/batch\n",
+      "Epoch 1/10 Iteration: 2400 Avg. Training loss: 4.8492 0.5804 sec/batch\n",
+      "Epoch 1/10 Iteration: 2500 Avg. Training loss: 4.8018 0.5783 sec/batch\n",
+      "Epoch 1/10 Iteration: 2600 Avg. Training loss: 4.8239 0.5848 sec/batch\n",
+      "Epoch 1/10 Iteration: 2700 Avg. Training loss: 4.7799 0.6559 sec/batch\n",
+      "Epoch 1/10 Iteration: 2800 Avg. Training loss: 4.7924 0.6280 sec/batch\n",
+      "Epoch 1/10 Iteration: 2900 Avg. Training loss: 4.7890 0.6157 sec/batch\n",
+      "Epoch 1/10 Iteration: 3000 Avg. Training loss: 4.7687 0.5989 sec/batch\n",
+      "Nearest to also: charging, observes, every, theorems, sheikh, stored, parity, ptc,\n",
+      "Nearest to b: afterburner, holidays, instructions, symbolist, southend, setting, cayman, leaguers,\n",
+      "Nearest to are: mirabilis, comic, polymers, wastes, salisbury, fistful, applets, composer,\n",
+      "Nearest to the: nominations, quays, toward, approval, honored, additionally, cuthbert, finances,\n",
+      "Nearest to to: diseases, deferred, banking, helps, shown, stupidity, holiness, caria,\n",
+      "Nearest to that: frenzy, eritreans, respond, recognition, theoretical, pork, distinction, clitoridectomy,\n",
+      "Nearest to were: bicycle, extended, giuseppe, jorge, bachelor, instructions, rarity, task,\n",
+      "Nearest to where: parsed, chapter, peace, talks, energy, ships, competitiveness, seceding,\n",
+      "Nearest to engine: ljubljana, priest, romagna, nullify, togoland, invitation, animations, discoverer,\n",
+      "Nearest to award: ushered, rewriting, este, contested, egregious, should, gammon, elias,\n",
+      "Nearest to pre: decision, vertical, hibbert, marks, banque, farting, alfaro, transshipment,\n",
+      "Nearest to writers: underwood, soho, secret, intended, love, sizes, contributions, bucks,\n",
+      "Nearest to dr: disney, magazine, nixon, wonderful, subway, twelve, morale, addition,\n",
+      "Nearest to recorded: peshawar, acclaimed, unskilled, moab, fragment, electrified, heightened, tubulidentata,\n",
+      "Nearest to resources: catastrophes, bought, strife, borrower, commemorative, address, infant, arithmetic,\n",
+      "Nearest to bbc: reservation, internationalism, sociable, robber, rubidium, acknowledgment, jonas, adding,\n",
+      "Epoch 1/10 Iteration: 3100 Avg. Training loss: 4.7897 0.6088 sec/batch\n",
+      "Epoch 1/10 Iteration: 3200 Avg. Training loss: 4.7545 0.6053 sec/batch\n",
+      "Epoch 1/10 Iteration: 3300 Avg. Training loss: 4.7204 0.5949 sec/batch\n"
+     ]
+    }
+   ],
    "source": [
     "epochs = 10\n",
     "batch_size = 1000\n",
@@ -579,7 +739,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
