--- a/embeddings/Skip-Grams-Solution.ipynb
+++ b/embeddings/Skip-Grams-Solution.ipynb
@@ -79,16 +79,10 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Text8 Dataset: 31.4MB [00:16, 1.88MB/s]                            \n"
-     ]
-    }
-   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "from urllib.request import urlretrieve\n",
     "from os.path import isfile, isdir\n",
@@ -133,8 +127,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -151,8 +147,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -177,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -206,11 +204,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16680599 4624525\n"
+     ]
+    }
+   ],
    "source": [
     "from collections import Counter\n",
     "import random\n",
@@ -220,7 +226,8 @@
     "total_count = len(int_words)\n",
     "freqs = {word: count/total_count for word, count in word_counts.items()}\n",
     "p_drop = {word: 1 - np.sqrt(threshold/freqs[word]) for word in word_counts}\n",
-    "train_words = [word for word in int_words if random.random() < (1 - p_drop[word])]"
+    "train_words = [word for word in int_words if random.random() < (1 - p_drop[word])]\n",
+    "print(len(int_words), len(train_words))"
    ]
   },
   {
@@ -455,6 +462,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -572,7 +580,9 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -614,7 +624,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
