--- a/intro-to-rnns/Anna_KaRNNa_Exercises.ipynb
+++ b/intro-to-rnns/Anna_KaRNNa_Exercises.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -37,11 +37,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_values([4, 15, 20, 33, 23, 1, 51, 16, 50, 75, 2, 10, 77, 3, 60, 47, 81, 41, 8, 79, 63, 73, 44, 30, 52, 62, 53, 45, 19, 54, 58, 34, 24, 18, 55, 37, 38, 57, 78, 70, 31, 40, 65, 68, 59, 7, 11, 22, 72, 13, 82, 46, 6, 71, 28, 42, 35, 61, 80, 49, 17, 43, 69, 64, 14, 74, 39, 12, 26, 66, 56, 76, 36, 9, 21, 5, 32, 25, 0, 27, 48, 67, 29])\n"
+     ]
+    }
+   ],
    "source": [
     "with open('anna.txt', 'r') as f:\n",
     "    text=f.read()\n",
@@ -60,11 +68,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Chapter 1\\n\\n\\nHappy families are all alike; every unhappy family is unhappy in its own\\nway.\\n\\nEverythin'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "text[:100]"
    ]
@@ -78,11 +97,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([31, 64, 57, 72, 76, 61, 74,  1, 16,  0,  0,  0, 36, 57, 72, 72, 81,\n",
+       "        1, 62, 57, 69, 65, 68, 65, 61, 75,  1, 57, 74, 61,  1, 57, 68, 68,\n",
+       "        1, 57, 68, 65, 67, 61, 26,  1, 61, 78, 61, 74, 81,  1, 77, 70, 64,\n",
+       "       57, 72, 72, 81,  1, 62, 57, 69, 65, 68, 81,  1, 65, 75,  1, 77, 70,\n",
+       "       64, 57, 72, 72, 81,  1, 65, 70,  1, 65, 76, 75,  1, 71, 79, 70,  0,\n",
+       "       79, 57, 81, 13,  0,  0, 33, 78, 61, 74, 81, 76, 64, 65, 70])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "encoded[:100]"
    ]
@@ -96,11 +131,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "83"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(vocab)"
    ]
@@ -136,9 +182,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -153,20 +199,21 @@
     "       n_steps: Number of sequence steps per batch\n",
     "    '''\n",
     "    # Get the number of characters per batch and number of batches we can make\n",
-    "    characters_per_batch = \n",
-    "    n_batches = \n",
+    "    characters_per_batch = n_seqs * n_steps\n",
+    "    n_batches = len(arr)//characters_per_batch\n",
     "    \n",
     "    # Keep only enough characters to make full batches\n",
-    "    arr = \n",
+    "    arr = arr[:n_batches*characters_per_batch]\n",
     "    \n",
     "    # Reshape into n_seqs rows\n",
-    "    arr = \n",
+    "    arr = arr.reshape((n_seqs, -1))\n",
     "    \n",
     "    for n in range(0, arr.shape[1], n_steps):\n",
     "        # The features\n",
-    "        x = \n",
+    "        x = arr[:, n:n+n_steps]\n",
     "        # The targets, shifted by one\n",
-    "        y = \n",
+    "        y = np.zeros_like(x)\n",
+    "        y[:, :-1], y[:,-1] = x[:, 1:], x[:, 0]\n",
     "        yield x, y"
    ]
   },
@@ -179,9 +226,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -191,11 +238,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x\n",
+      " [[31 64 57 72 76 61 74  1 16  0]\n",
+      " [ 1 57 69  1 70 71 76  1 63 71]\n",
+      " [78 65 70 13  0  0  3 53 61 75]\n",
+      " [70  1 60 77 74 65 70 63  1 64]\n",
+      " [ 1 65 76  1 65 75 11  1 75 65]\n",
+      " [ 1 37 76  1 79 57 75  0 71 70]\n",
+      " [64 61 70  1 59 71 69 61  1 62]\n",
+      " [26  1 58 77 76  1 70 71 79  1]\n",
+      " [76  1 65 75 70  7 76 13  1 48]\n",
+      " [ 1 75 57 65 60  1 76 71  1 64]]\n",
+      "\n",
+      "y\n",
+      " [[64 57 72 76 61 74  1 16  0  0]\n",
+      " [57 69  1 70 71 76  1 63 71 65]\n",
+      " [65 70 13  0  0  3 53 61 75 11]\n",
+      " [ 1 60 77 74 65 70 63  1 64 65]\n",
+      " [65 76  1 65 75 11  1 75 65 74]\n",
+      " [37 76  1 79 57 75  0 71 70 68]\n",
+      " [61 70  1 59 71 69 61  1 62 71]\n",
+      " [ 1 58 77 76  1 70 71 79  1 75]\n",
+      " [ 1 65 75 70  7 76 13  1 48 64]\n",
+      " [75 57 65 60  1 76 71  1 64 61]]\n"
+     ]
+    }
+   ],
    "source": [
     "print('x\\n', x[:10, :10])\n",
     "print('\\ny\\n', y[:10, :10])"
@@ -780,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
