--- a/tv-script-generation/dlnd_tv_script_generation.ipynb
+++ b/tv-script-generation/dlnd_tv_script_generation.ipynb
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -137,7 +137,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('moe_szyslak', 5), ('your', 4), ('you', 4), ('rotch', 4), ('mike', 4), ('drink', 3), ('to', 3), ('one', 2), ('not', 2), ('hey', 2), ('name', 2), ('homer', 2), ('problems', 2), ('on', 2), (\"i'm\", 2), ('the', 2), ('my', 2), ('gonna', 2), ('yeah', 2), ('should', 2)]\n",
       "Tests Passed\n"
      ]
     }
@@ -158,9 +157,9 @@
     "    #local_text = local_text.split()\n",
     "\n",
     "    counter = Counter(text)\n",
-    "    print(counter.most_common(20))\n",
+    "    #print(counter.most_common(20))\n",
     "    vocab_to_int, int_to_vocab = {}, {}\n",
-    "    vocab_list = (zip(counter, range(1, len(counter))))\n",
+    "    vocab_list = (zip(counter, range(0, len(counter))))\n",
     "    \n",
     "    vocab_to_int = {word: i for word, i in vocab_list}\n",
     "    int_to_vocab = dict(zip(vocab_to_int.values(), vocab_to_int.keys()))\n",
@@ -200,21 +199,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def token_lookup():\n",
     "    \"\"\"\n",
     "    Generate a dict to turn punctuation into a token.\n",
     "    :return: Tokenize dictionary where the key is the punctuation and the value is the token\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    punctuation_dict = {\n",
+    "        '.': 'period', ',': 'comma', '\"': 'quotation_mark', \n",
+    "        ';': 'semicolon', '!': 'exclamation_mark', '?': 'question_mark',\n",
+    "        '(': 'left_parentheses', ')': 'right_parentheses', '--': 'dash', '\\n': 'return'\n",
+    "    }\n",
+    "    return punctuation_dict\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -235,18 +246,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "./data/simpsons/moes_tavern_lines.txt\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
     "\"\"\"\n",
     "# Preprocess Training, Validation, and Testing Data\n",
+    "print(data_dir)\n",
     "helper.preprocess_and_save_data(data_dir, token_lookup, create_lookup_tables)"
    ]
   },
@@ -263,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -302,11 +322,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TensorFlow Version: 1.0.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Yasser Makram\\AppData\\Local\\conda\\conda\\envs\\dlnd-tf-lab\\lib\\site-packages\\ipykernel\\__main__.py:14: UserWarning: No GPU found. Please use a GPU to train your neural network.\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
