--- a/tv-script-generation/dlnd_tv_script_generation.ipynb
+++ b/tv-script-generation/dlnd_tv_script_generation.ipynb
@@ -376,21 +376,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def get_inputs():\n",
     "    \"\"\"\n",
     "    Create TF Placeholders for input, targets, and learning rate.\n",
     "    :return: Tuple (input, targets, learning rate)\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None, None, None\n",
+    "    inputs = tf.placeholder(tf.int32, shape=(None, None), name='input')\n",
+    "    targets = tf.placeholder(tf.int32, shape=(None, None))\n",
+    "    learning_rate = tf.placeholder(tf.float32)\n",
+    "    return inputs, targets, learning_rate\n",
     "\n",
     "\n",
     "\"\"\"\n",
