--- a/tv-script-generation/dlnd_tv_script_generation.ipynb
+++ b/tv-script-generation/dlnd_tv_script_generation.ipynb
@@ -427,13 +427,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def get_init_cell(batch_size, rnn_size):\n",
     "    \"\"\"\n",
@@ -442,8 +450,16 @@
     "    :param rnn_size: Size of RNNs\n",
     "    :return: Tuple (cell, initialize state)\n",
     "    \"\"\"\n",
+    "    num_layers = 1\n",
+    "    keep_prop = 0.5\n",
     "    \n",
-    "    return None, None\n",
+    "    lstm = tf.contrib.rnn.BasicLSTMCell(rnn_size)\n",
+    "\n",
+    "    dropout = tf.contrib.rnn.DropoutWrapper(lstm, input_keep_prob=keep_prop)\n",
+    "\n",
+    "    cell = tf.contrib.rnn.MultiRNNCell([dropout]*num_layers)\n",
+    "    initial_state = tf.identity(cell.zero_state(batch_size, tf.float32), 'initial_state')\n",
+    "    return cell, initial_state\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -465,13 +481,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def get_embed(input_data, vocab_size, embed_dim):\n",
     "    \"\"\"\n",
@@ -481,8 +505,10 @@
     "    :param embed_dim: Number of embedding dimensions\n",
     "    :return: Embedded input.\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    embeddings_matrix = tf.random_uniform([vocab_size, embed_dim], -1.0, 1.0)\n",
+    "\n",
+    "    embed = tf.nn.embedding_lookup(embeddings_matrix, input_data)\n",
+    "    return embed\n",
     "\n",
     "\n",
     "\"\"\"\n",
