--- a/tv-script-generation/dlnd_tv_script_generation.ipynb
+++ b/tv-script-generation/dlnd_tv_script_generation.ipynb
@@ -677,13 +677,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4480\n",
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def get_batches(int_text, batch_size, seq_length):\n",
     "    \"\"\"\n",
@@ -693,8 +702,23 @@
     "    :param seq_length: The length of sequence\n",
     "    :return: Batches as a Numpy array\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    \n",
+    "    #print(len(int_text))\n",
+    "    batch_seq_size = batch_size*seq_length\n",
+    "    num_batches = len(int_text)//(batch_size*seq_length)\n",
+    "    int_text = int_text[:num_batches*(batch_size*seq_length)]\n",
+    "    print(len(int_text))\n",
+    "    output = np.zeros((num_batches, 2, batch_size, seq_length), dtype=np.int)\n",
+    "    for batch in range(0, num_batches):\n",
+    "        x = [[int_text[x+y] for x in range(0, seq_length)] for y in range(batch*seq_length, (num_batches*batch_seq_size)-(seq_length*(num_batches-batch-1)), seq_length*num_batches)]\n",
+    "        y = [[int_text[x+y+1] if (x+y+1)<len(int_text) else int_text[0] for x in range(0, seq_length)] for y in range(batch*seq_length, (num_batches*batch_seq_size)-(seq_length*(num_batches-batch-1)), seq_length*num_batches)]\n",
+    "        #print(x)\n",
+    "        #print(y)\n",
+    "        output[batch, 0, :, :] = x\n",
+    "        output[batch, 1, :, :] = y\n",
+    "\n",
+    "    #print(output.shape)\n",
+    "    return output\n",
     "\n",
     "\n",
     "\"\"\"\n",
